[🐛 Fix] Fix card title to align left

--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -145,6 +145,7 @@ section {
     h3 {
       font-size: 25px;
       font-weight: 800;
+      width: 100%;
     }
   }
 }
